--- a/ISLANDRESORT/island.html
+++ b/ISLANDRESORT/island.html
@@ -15,7 +15,12 @@
       <li>Scenic Views</li>
       <li>And lots more! Anything you imagine is possible!</li>
     </ul>
-    <p><a href="../pages/accommodations.html">ACCOMMODATIONS</a> ACTIVITIES TRAVEL ARRANGEMENTS PICTURES CONTACT
+    <p><a href="pages/accommodations.html">ACCOMMODATIONS</a>
+      <a href="pages/activities.html">ACTIVITIES</a>
+      <a href="pages/travel.html">TRAVEL</a>
+      <a href="pages/arrangements.html">ARRANGEMENTS</a>
+      <a href="pages/pictures.html">PICTURES</a>
+      <a href="pages/contact-info.html">CONTACT</a>
     </p>
   </body>
 </html>
