completed 1st page

--- a/ISLANDRESORT/pages/arrangements.html
+++ b/ISLANDRESORT/pages/arrangements.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="../styles.css" rel="stylesheet" type="text/css">
         <title>Travel Arrangements</title>
   </head>
+  <h1>TRAVEL ARRANGEMENTS</h1>
   <body>
     <p> There are two decadent ways to travel to our resort</p>
     <ul>
