--- a/ISLANDRESORT/pages/accommodations.html
+++ b/ISLANDRESORT/pages/accommodations.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="../styles.css" rel="stylesheet" type="text/css">
         <title>Accommodations</title>
   </head>
   <body>
+    <h1>ACCOMMODATIONS</h1>
    <p>We have a variety of accommations to suit your specific needs</p>
     <ul>
      <li>Private Cabins</li>
