--- a/ISLANDRESORT/pages/activities.html
+++ b/ISLANDRESORT/pages/activities.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>activities</title>
+    <link href="../styles.css" rel="stylesheet" type="text/css">
+      <title>activities</title>
   </head>
   <body>
     <h1>Great Activities For the Whole Family</h1>
